fixed layout bugs

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -44,7 +44,7 @@
     }
 
     a {
-        font-size: small;
+        font-size: .6rem;
     }
 
     .img-1 {
@@ -61,6 +61,17 @@
 
 
 @media only screen and (max-width: 400px ) {
+
+    logo {
+        padding-left: 10px;
+    }
+
+    p {
+        font-size: 16px;
+        line-height: 35px;
+        letter-spacing: 0.87px;
+        text-indent: 27
+    }
 
     h1 {
         font-size: 25px;
